--- a/src/en/index.ejs
+++ b/src/en/index.ejs
@@ -356,7 +356,7 @@
                           <div class="wpb_text_column wpb_content_element  chuoi_gia_tri_title">
                             <div class="wpb_wrapper">
                               <h3 style="text-align: center;">A Range of Value</h3>
-                              <p style="text-align: center;">At VIET ACC, we are always pursuing sustainable development
+                              <p style="text-align: center;">At MINH ANH GROUP, we are always pursuing sustainable development
                                 strategies, striving to reach the highest standards in the field of commerce to bring
                                 outstanding value to our customers and partners.</p>
                             </div>
@@ -511,10 +511,10 @@
                                             <p><img class="alignnone size-full wp-image-50"
                                                 src="https://www.viet-acc.com/wp-content/uploads/2018/05/chuoi_gia_Tri_icon_3.png"
                                                 alt="" width="192" height="186" /></p>
-                                            <h3>Human in VIET ACC</h3>
+                                            <h3>Human in MINH ANH GROUP</h3>
                                             <p>Not only are we meeting the needs of our customers, we also actively
                                               support our customers and partners in fulfilling their expectations, which
-                                              VIET ACC has been doing for the last 10 years.</p>
+                                              MINH ANH GROUP has been doing for the last 10 years.</p>
                                           </div>
                                         </div>
                                       </div>
@@ -550,20 +550,7 @@
                 style='background-image:url(https://www.viet-acc.com/wp-content/uploads/2018/05/banner_count_down.png); text-align:left;'>
                 <div class=" section_inner clearfix">
                   <div class='section_inner_margin clearfix'>
-                    <div class="wpb_column vc_column_container vc_col-sm-3">
-                      <div class="vc_column-inner ">
-                        <div class="wpb_wrapper">
-                          <div class="q_counter_holder  left boxed_counter" style=""><span class="counter  zero"
-                              style="">500</span><span class="separator small" style=""></span></div>
-                          <div class="wpb_text_column wpb_content_element  text_counter">
-                            <div class="wpb_wrapper">
-                              <p>The largest enterprise in Vietnam<br />
-                                Selected by VNR500</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+      
                     <div class="wpb_column vc_column_container vc_col-sm-3">
                       <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
@@ -582,7 +569,7 @@
                       <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
                           <div class="q_counter_holder  left boxed_counter" style=""><span class="counter  zero"
-                              style="">500</span><span class="separator small" style=""></span></div>
+                              style="">100</span><span class="separator small" style=""></span></div>
                           <div class="wpb_text_column wpb_content_element  text_counter">
                             <div class="wpb_wrapper">
                               <p>Partners<br />
@@ -600,7 +587,7 @@
                           <div class="wpb_text_column wpb_content_element  text_counter">
                             <div class="wpb_wrapper">
                               <p>In total customers<br />
-                                sticking over 5 years</p>
+                                sticking over 3 years</p>
                             </div>
                           </div>
                         </div>
@@ -625,55 +612,55 @@
                           <section class="slider slider_carusal_gallery_bank_content">
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/logo_doitac_1-2.png"
+                                <img src="../assets/img/doi-tac-chien-luoc/logo_doitac_1-2.png"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/logo_3.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/logo_3.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/logo_2.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/logo_2.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/logo_4.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/logo_4.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/1.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/1.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/4.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/4.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2021/10/logo-innov-ad.png"
+                                <img src="../assets/img/doi-tac-chien-luoc/logo-innov-ad.png"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2021/10/logo-R2-AGRO.png"
+                                <img src="../assets/img/doi-tac-chien-luoc/logo-R2-AGRO.png"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2021/10/orffa-logo.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/orffa-logo.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2021/10/jefo-logo.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/jefo-logo.png" alt="" />
                               </figure>
                             </div>
                           </section>
