--- a/src/en/partner.ejs
+++ b/src/en/partner.ejs
@@ -74,7 +74,7 @@
                                                 srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_1-300x141.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_1.png 369w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>DSM &#8211; HOLLAND</h3>
-                                            <p>In 2008, VIET ACC officially became a strategic partner of DSM in
+                                            <p>In 2022, MINH ANH GROUP officially became a strategic partner of DSM in
                                               distributing Animal Nutrition product group in Vietnam market.</p>
                                           </div>
                                         </div>
@@ -135,7 +135,7 @@
                                                 srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-300x300.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-150x150.png 150w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2.png 360w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>DIAMOND V &#8211; UNITED STATES</h3>
-                                            <p>In 2012, VIET ACC became the sole distributor and distributor of
+                                            <p>In 2022, MINH ANH GROUP became the sole distributor and distributor of
                                               Species-Specific and Original Line for DIAMOND V in Vietnam.</p>
                                           </div>
                                         </div>
@@ -208,7 +208,7 @@
                                                 srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_3-300x289.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_3.png 324w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>OLMIX &#8211; FRANCE</h3>
-                                            <p>In 2009, Viet ACC cooperated with OLMIX to distribute Animal Care
+                                            <p>In 2022, MINH ANH GROUP cooperated with OLMIX to distribute Animal Care
                                               products to OLMIX Group in Vietnam.</p>
                                           </div>
                                         </div>
