--- a/src/index.ejs
+++ b/src/index.ejs
@@ -22,7 +22,7 @@
   <meta name="twitter:title" content="Công Ty" />
   <%- include('partial/head.ejs') %>
   <script
-    type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"https:\/\/www.minhanhxnk.com\/","name":"Minh Anh Group","potentialAction":{"@type":"SearchAction","target":"https:\/\/www.viet-acc.com\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
+    type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"https:\/\/www.minhanhxnk.com\/","name":"Minh Anh Group","potentialAction":{"@type":"SearchAction","target":"https:\/\/www.minhanhxnk.com\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
   <style id='stylesheet-inline-css' type='text/css'>
     .page-id-15.disabled_footer_top .footer_top_holder,
     .page-id-15.disabled_footer_bottom .footer_bottom_holder {
@@ -397,7 +397,7 @@
                           <div class="wpb_text_column wpb_content_element  chuoi_gia_tri_title">
                             <div class="wpb_wrapper">
                               <h3 style="text-align: center;">Chuỗi giá trị</h3>
-                              <p style="text-align: center;">Tại VIET ACC, chúng tôi luôn theo đuổi chiến lược phát
+                              <p style="text-align: center;">Tại MINH ANH GROUP, chúng tôi luôn theo đuổi chiến lược phát
                                 triển bền vững, nỗ lực vươn tới các tiêu chuẩn cao nhất trong lĩnh vực thương mại nhằm
                                 mang đến những giá trị vượt trội cho khách hàng và các bên liên quan.</p>
                             </div>
@@ -433,9 +433,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
                                                 height="618"
-                                                src="https://www.viet-acc.com/wp-content/uploads/2018/05/img_chuoi_1.jpg"
+                                                src="assets/img/index/img_chuoi_1.jpg"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/img_chuoi_1.jpg 792w, https://www.viet-acc.com/wp-content/uploads/2018/05/img_chuoi_1-300x234.jpg 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/img_chuoi_1-768x599.jpg 768w, https://www.viet-acc.com/wp-content/uploads/2018/05/img_chuoi_1-700x546.jpg 700w"
+                                                srcset="assets/img/index/img_chuoi_1.jpg 792w, assets/img/index/img_chuoi_1-300x234.jpg 300w, assets/img/index/img_chuoi_1-768x599.jpg 768w, assets/img/index/img_chuoi_1-700x546.jpg 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
@@ -557,7 +557,7 @@
                                             <h3>Con người</h3>
                                             <p>Không chỉ dừng lại ở việc đáp ứng tốt nhu cầu, chúng tôi còn chủ động
                                               tiếp sức để hỗ trợ cho khách hàng và đối tác phát triển vượt mọi kỳ vọng,
-                                              thứ mà con người VIET ACC đã làm được trong suốt 10 năm qua.</p>
+                                              thứ mà con người Minh Anh Group đã làm được trong suốt 3 năm qua.</p>
                                           </div>
                                         </div>
                                       </div>
@@ -593,25 +593,12 @@
                 style='background-image:url(assets/img/index/banner_count_down.png); text-align:left;'>
                 <div class=" section_inner clearfix">
                   <div class='section_inner_margin clearfix'>
+
                     <div class="wpb_column vc_column_container vc_col-sm-3">
                       <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
                           <div class="q_counter_holder  left boxed_counter" style=""><span class="counter  zero"
-                              style="">500</span><span class="separator small" style=""></span></div>
-                          <div class="wpb_text_column wpb_content_element  text_counter">
-                            <div class="wpb_wrapper">
-                              <p>Doanh nghiệp lớn nhất VN<br />
-                                Do VNR500 bình chọn</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="wpb_column vc_column_container vc_col-sm-3">
-                      <div class="vc_column-inner ">
-                        <div class="wpb_wrapper">
-                          <div class="q_counter_holder  left boxed_counter" style=""><span class="counter  zero"
-                              style="">5%</span><span class="separator small" style=""></span></div>
+                              style="">5</span><span class="separator small" style=""></span></div>
                           <div class="wpb_text_column wpb_content_element  text_counter">
                             <div class="wpb_wrapper">
                               <p>Tỷ lệ<br />
@@ -625,7 +612,7 @@
                       <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
                           <div class="q_counter_holder  left boxed_counter" style=""><span class="counter  zero"
-                              style="">500</span><span class="separator small" style=""></span></div>
+                              style="">100%</span><span class="separator small" style=""></span></div>
                           <div class="wpb_text_column wpb_content_element  text_counter">
                             <div class="wpb_wrapper">
                               <p>Đối tác trên<br />
@@ -643,7 +630,7 @@
                           <div class="wpb_text_column wpb_content_element  text_counter">
                             <div class="wpb_wrapper">
                               <p>Trên tổng Số lượng KH<br />
-                                gắn bó trên 5 năm.</p>
+                                gắn bó trên 3 năm.</p>
                             </div>
                           </div>
                         </div>
