- update img src for en page

--- a/src/en/career.ejs
+++ b/src/en/career.ejs
@@ -10,7 +10,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Career" />
   <meta property="og:url" content="/en/career/" />
-  <meta property="og:site_name" content="VIET-ACC" />
+  <meta property="og:site_name" content="MINH ANH GROUP" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Career" />
   <%- include('../partial/head.ejs') %>
@@ -36,7 +36,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="https://www.viet-acc.com/wp-content/uploads/2018/05/banner.png" alt="&nbsp;" /> </div>
+                  src="../assets/img/nghe-nghiep/banner.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
