--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -163,7 +163,7 @@
                     <div class="textwidget custom-html-widget">
                       <ul class="career_header">
                         <li><a href="/en/career.html"><img
-                              src="https://www.viet-acc.com/wp-content/themes/vietacc-child/images/career_icon.svg">CAREER</a>
+                              src="../assets/img/index/career_icon.svg">CAREER</a>
                         </li>
                       </ul>
                     </div>
