--- a/src/en/partner.ejs
+++ b/src/en/partner.ejs
@@ -33,7 +33,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="https://www.viet-acc.com/wp-content/uploads/2018/05/banner.png" alt="&nbsp;" /> </div>
+                  src="../assets/img/doi-tac-chien-luoc/banner.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
@@ -69,9 +69,9 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-78"
-                                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
+                                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
                                                 width="300" height="141"
-                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_1-300x141.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_1.png 369w"
+                                                srcset="../assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png 300w, ../assets/img/doi-tac-chien-luoc/doitact_logo_1.png 369w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>DSM &#8211; HOLLAND</h3>
                                             <p>In 2022, MINH ANH GROUP officially became a strategic partner of DSM in
@@ -88,9 +88,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
                                                 height="618"
-                                                src="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_1.png"
+                                                src="../assets/img/doi-tac-chien-luoc/doitact_1.png"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_1.png 792w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_1-300x234.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_1-768x599.png 768w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_1-700x546.png 700w"
+                                                srcset="../assets/img/doi-tac-chien-luoc/doitact_1.png 792w, ../assets/img/doi-tac-chien-luoc/doitact_1-300x234.png 300w, ../assets/img/doi-tac-chien-luoc/doitact_1-768x599.png 768w, ../assets/img/doi-tac-chien-luoc/doitact_1-700x546.png 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
@@ -114,9 +114,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
                                                 height="618"
-                                                src="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2.png"
+                                                src="../assets/img/doi-tac-chien-luoc/doitact_2.png"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2.png 792w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2-300x234.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2-768x599.png 768w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2-700x546.png 700w"
+                                                srcset="../assets/img/doi-tac-chien-luoc/doitact_2.png 792w, ../assets/img/doi-tac-chien-luoc/doitact_2-300x234.png 300w, ../assets/img/doi-tac-chien-luoc/doitact_2-768x599.png 768w, ../assets/img/doi-tac-chien-luoc/doitact_2-700x546.png 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
@@ -130,9 +130,9 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-80"
-                                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
+                                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
                                                 width="300" height="300"
-                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-300x300.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-150x150.png 150w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2.png 360w"
+                                                srcset="../assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png 300w, ../assets/img/doi-tac-chien-luoc/doitact_logo_2-150x150.png 150w, ../assets/img/doi-tac-chien-luoc/doitact_logo_2.png 360w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>DIAMOND V &#8211; UNITED STATES</h3>
                                             <p>In 2022, MINH ANH GROUP became the sole distributor and distributor of
@@ -158,12 +158,12 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-80"
-                                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
+                                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
                                                 width="300" height="300"
-                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-300x300.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-150x150.png 150w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2.png 360w"
+                                                srcset="../assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png 300w, ../assets/img/doi-tac-chien-luoc/doitact_logo_2-150x150.png 150w, ../assets/img/doi-tac-chien-luoc/doitact_logo_2.png 360w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>DIAMOND V &#8211; HOA KỲ</h3>
-                                            <p>Năm 2012, <strong>VIỆT ACC</strong> trở thành nhà phân phối chính thức và
+                                            <p>Năm 2022, <strong>MINH ANH GROUP</strong> trở thành nhà phân phối chính thức và
                                               duy nhất cung cấp nhóm sản phẩm Species-Specific và Original Line cho
                                               thương hiệu <strong>DIAMOND V</strong> tại Việt Nam</p>
                                           </div>
@@ -178,9 +178,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
                                                 height="618"
-                                                src="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2.png"
+                                                src="../assets/img/doi-tac-chien-luoc/doitact_2.png"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2.png 792w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2-300x234.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2-768x599.png 768w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2-700x546.png 700w"
+                                                srcset="../assets/img/doi-tac-chien-luoc/doitact_2.png 792w, ../assets/img/doi-tac-chien-luoc/doitact_2-300x234.png 300w, ../assets/img/doi-tac-chien-luoc/doitact_2-768x599.png 768w, ../assets/img/doi-tac-chien-luoc/doitact_2-700x546.png 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
@@ -203,9 +203,9 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-79"
-                                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
+                                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
                                                 width="300" height="289"
-                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_3-300x289.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_3.png 324w"
+                                                srcset="../assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png 300w, ../assets/img/doi-tac-chien-luoc/doitact_logo_3.png 324w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>OLMIX &#8211; FRANCE</h3>
                                             <p>In 2022, MINH ANH GROUP cooperated with OLMIX to distribute Animal Care
@@ -222,7 +222,7 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="440"
                                                 height="343"
-                                                src="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_3-e1529392504214.png"
+                                                src="../assets/img/doi-tac-chien-luoc/doitact_3-e1529392504214.png"
                                                 class="vc_single_image-img attachment-full" alt="" /></div>
                                           </div>
                                         </div>
@@ -240,7 +240,7 @@
                 </div>
               </div>
               <div class="vc_row wpb_row section vc_row-fluid "
-                style='background-image:url(https://www.viet-acc.com/wp-content/uploads/2018/05/banner_doitac.png); text-align:left;'>
+                style='background-image:url(../assets/img/doi-tac-chien-luoc/banner_doitac.png); text-align:left;'>
                 <div class=" full_section_inner clearfix">
                   <div
                     class="wpb_animate_when_almost_visible wpb_slideInUp slideInUp wpb_column vc_column_container vc_col-sm-12">
@@ -249,11 +249,11 @@
                         <div class="wpb_text_column wpb_content_element  nha_cung_cap_text">
                           <div class="wpb_wrapper">
                             <p><img class="alignnone size-full wp-image-35 aligncenter" style="margin-bottom: 30px;"
-                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
+                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
                             <h3 style="text-align: center;">Connect the livestock industry<br />
                               for a prosperous life</h3>
                             <p><img class="size-full wp-image-36 aligncenter"
-                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
+                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
                           </div>
                         </div>
                       </div>
@@ -277,55 +277,55 @@
                           <section class="slider slider_carusal_gallery_bank_content">
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/logo_doitac_1-2.png"
+                                <img src="../assets/img/doi-tac-chien-luoc/logo_doitac_1-2.png"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/logo_3.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/logo_3.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/logo_2.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/logo_2.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/logo_4.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/logo_4.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/1.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/1.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/4.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/4.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2021/10/logo-innov-ad.png"
+                                <img src="../assets/img/doi-tac-chien-luoc/logo-innov-ad.png"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2021/10/logo-R2-AGRO.png"
+                                <img src="../assets/img/doi-tac-chien-luoc/logo-R2-AGRO.png"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2021/10/orffa-logo.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/orffa-logo.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2021/10/jefo-logo.png" alt="" />
+                                <img src="../assets/img/doi-tac-chien-luoc/jefo-logo.png" alt="" />
                               </figure>
                             </div>
                           </section>
